--- a/style.css
+++ b/style.css
@@ -25,7 +25,7 @@ nav{
   display: flex;
   flex-direction: row;
   justify-content: space-between;
-  margin: 3rem;
+  margin: 2rem;
 }
 nav ul{
   list-style: none;
@@ -956,7 +956,8 @@ align-items: center;
   flex-direction: row;
   justify-content: space-between;
   gap: 2rem;   
-}
+  list-style: none;
+ }
 #Sm-first-div{
 display: none;
 }
@@ -1052,7 +1053,8 @@ display: none;
   }
   #Sm-first-div{
     display: flex;
-   }
+    list-style: none;
+    }
   #Second-child{
     display: grid;
     grid-template-columns: 1fr 1fr;
@@ -1070,3 +1072,4 @@ display: none;
     color: white;
    }
     }
+    
